--- a/views/bookshelf.html
+++ b/views/bookshelf.html
@@ -1,5 +1,4 @@
 <div class="bookshelf row">
-
   <!-- 
   TODO: Loop through myBooks and display each one with this HTML
   <div class="book col-md-3">
@@ -10,5 +9,12 @@
     </a>
   </div>
   -->
+  <div class="book col-md-3" ng-repeat="book in myBooks">
+      <a href="#/books/{{$index}}">
+        <img ng-src="{{ book.cover }}">
+        <h3 class="title">{{ book.title }}</h3>
+        <p class="author">by {{ book.author }}</p>
+      </a>
+  </div>
 
 </div>
